k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: cloud-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: dms237/api-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: cloud-project
spec:
  selector:
    app: api-service
  ports:
    - port: 3000
      targetPort: 3000
